add auth on docs
