# docs/swagger.yaml
@@ -111,6 +111,12 @@ paths:
       consumes:
       - application/json
       description: Get all categories
+      parameters:
+      - description: Token de acesso
+        in: header
+        name: x-access-token
+        required: true
+        type: string
       produces:
       - application/json
       responses:
@@ -122,6 +128,12 @@ paths:
           description: Bad Request
           schema:
             $ref: '#/definitions/helper.ErrorResponse'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/helper.ErrorResponse'
+      security:
+      - ApiKeyAuth: []
       summary: Get categories
       tags:
       - Category
@@ -136,6 +148,11 @@ paths:
         name: id
         required: true
         type: integer
+      - description: Token de acesso
+        in: header
+        name: x-access-token
+        required: true
+        type: string
       produces:
       - application/json
       responses:
@@ -147,10 +164,16 @@ paths:
           description: Bad Request
           schema:
             $ref: '#/definitions/helper.ErrorResponse'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/helper.ErrorResponse'
         "500":
           description: Internal Server Error
           schema:
             $ref: '#/definitions/helper.ErrorResponse'
+      security:
+      - ApiKeyAuth: []
       summary: Delete category
       tags:
       - Category
@@ -164,6 +187,11 @@ paths:
         name: id
         required: true
         type: integer
+      - description: Token de acesso
+        in: header
+        name: x-access-token
+        required: true
+        type: string
       produces:
       - application/json
       responses:
@@ -175,6 +203,12 @@ paths:
           description: Bad Request
           schema:
             $ref: '#/definitions/helper.ErrorResponse'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/helper.ErrorResponse'
+      security:
+      - ApiKeyAuth: []
       summary: Get category
       tags:
       - Category
@@ -189,6 +223,11 @@ paths:
         required: true
         schema:
           $ref: '#/definitions/category.CreateCategoryRequest'
+      - description: Token de acesso
+        in: header
+        name: x-access-token
+        required: true
+        type: string
       produces:
       - application/json
       responses:
@@ -200,10 +239,16 @@ paths:
           description: Bad Request
           schema:
             $ref: '#/definitions/helper.ErrorResponse'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/helper.ErrorResponse'
         "500":
           description: Internal Server Error
           schema:
             $ref: '#/definitions/helper.ErrorResponse'
+      security:
+      - ApiKeyAuth: []
       summary: Create category
       tags:
       - Category
@@ -248,6 +293,11 @@ paths:
         name: id
         required: true
         type: integer
+      - description: Token de acesso
+        in: header
+        name: x-access-token
+        required: true
+        type: string
       produces:
       - application/json
       responses:
@@ -259,10 +309,16 @@ paths:
           description: Bad Request
           schema:
             $ref: '#/definitions/helper.ErrorResponse'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/helper.ErrorResponse'
         "500":
           description: Internal Server Error
           schema:
             $ref: '#/definitions/helper.ErrorResponse'
+      security:
+      - ApiKeyAuth: []
       summary: Delete user
       tags:
       - User
@@ -270,6 +326,12 @@ paths:
       consumes:
       - application/json
       description: Get all users
+      parameters:
+      - description: Token de acesso
+        in: header
+        name: x-access-token
+        required: true
+        type: string
       produces:
       - application/json
       responses:
@@ -281,6 +343,12 @@ paths:
           description: Bad Request
           schema:
             $ref: '#/definitions/helper.ErrorResponse'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/helper.ErrorResponse'
+      security:
+      - ApiKeyAuth: []
       summary: Get users
       tags:
       - User
@@ -329,6 +397,11 @@ paths:
         required: true
         schema:
           $ref: '#/definitions/user.UpdateUserRequest'
+      - description: Token de acesso
+        in: header
+        name: x-access-token
+        required: true
+        type: string
       produces:
       - application/json
       responses:
@@ -340,6 +413,12 @@ paths:
           description: Bad Request
           schema:
             $ref: '#/definitions/helper.ErrorResponse'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/helper.ErrorResponse'
+      security:
+      - ApiKeyAuth: []
       summary: Update user
       tags:
       - User
