# handler/category/createCategory.go
@@ -20,6 +20,9 @@ import (
 // @Success 200 {object} ResponseCategory
 // @Failure 400 {object} helper.ErrorResponse
 // @Failure 500 {object} helper.ErrorResponse
+// @Failure 401 {object} helper.ErrorResponse
+// @Security ApiKeyAuth
+// @Param x-access-token header string true "Token de acesso"
 // @Router /category [POST]
 func CreateCategoryHandler(ctx *gin.Context) {
 	request := CreateCategoryRequest{}
