# handler/user/deleteUser.go
@@ -19,6 +19,9 @@ import (
 // @Success 200 {object} ResponseUser
 // @Failure 400 {object} helper.ErrorResponse
 // @Failure 500 {object} helper.ErrorResponse
+// @Failure 401 {object} helper.ErrorResponse
+// @Security ApiKeyAuth
+// @Param x-access-token header string true "Token de acesso"
 // @Router /user [DELETE]
 func DeleteUserHandler(ctx *gin.Context) {
 	id := ctx.Query("id")
